feat: update login title and improve user experience in checkout and product pages
- Changed login title from "Bienvenido de vuelta" to "Bienvenido nuevamente".
- Updated user name handling in checkout to include last names.
- Enhanced CSS styles for product display, including alignment and responsiveness.
- Added loading indicators in product and shop pages for better user feedback.
- Implemented delete functionality for categories, products, and users with confirmation prompts.
- Improved error handling and user notifications for deletion actions.
- Updated routes for contact and about pages to reflect new paths.
- Added email sending functionality for quotes with emailjs integration.
- Refactored code for better readability and maintainability across various components.

--- a/src/Pages/cart/tienda/Shop.module.css
+++ b/src/Pages/cart/tienda/Shop.module.css
@@ -1,22 +1,19 @@
 .shopContainer {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: row;
   justify-content: center;
-  align-items: stretch;
-  align-content: stretch;
+
+  max-width: 1350px;
+  margin: 0 auto;
+
+  width: 100%;
+  gap: 20px;
 }
 
 .productsSection {
-  padding: 48px 0;
+  max-width: 900px;
   width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  align-content: stretch;
-  gap: 20px;
+  margin: 5% auto;
 }
 
 /* 🔹 Tablets (pantallas medianas) */
