--- a/src/Components/landing/Contactenos/Redes.module.css
+++ b/src/Components/landing/Contactenos/Redes.module.css
@@ -8,6 +8,11 @@
   flex-wrap: wrap;
   word-break: break-word;
   gap: 20px;
+
+  max-width: 1200px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 .containerContacto img {
   width: 30px;
