--- a/src/Pages/cart/producto/Producto.module.css
+++ b/src/Pages/cart/producto/Producto.module.css
@@ -7,23 +7,32 @@
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   align-content: stretch;
   gap: 60px;
 
-  margin: 20px 0;
+  margin: 20px auto;
   width: 100%;
+  max-width: 1200px;
 }
 
 .bannerLeft {
-  width: 50%;
-  height: 400px;
+  max-width: 500px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .productoImagen {
   width: 100%;
   height: 100%;
   object-fit: contain;
+
+  max-width: 500px;
+  max-height: 400px;
 }
 
 .title {
@@ -38,7 +47,7 @@
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   font-size: 1rem;
-  line-height: 60px;
+  margin: 20px 0;
 }
 
 .categoria {
@@ -114,17 +123,22 @@ button.addToCartButton {
 
 .categoriaImagen {
   width: 100%;
-  /* height: 200px; */
   object-fit: contain;
+
+  max-width: 500px;
+
+  display: block;
 }
 
 .infoGrid {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: 40px;
+  gap: 20px;
   width: 100%;
-  margin: 40px 0;
+  margin: 80px auto;
+
+  max-width: 1300px;
 }
 
 /* Columna izquierda y derecha */
@@ -132,6 +146,8 @@ button.addToCartButton {
 .usosContainer {
   width: 50%;
   text-align: justify;
+  display: flex;
+  flex-direction: column;
 }
 
 /*TABLETS*/
